styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: Poppins, Arial, Helvetica, sans-serif;
	min-height: 100vh;
	background: #03000f;
	color: #fff;
	overflow: hidden;
}

#home-btn,
#info-btn {
	position: absolute;
	top: 30px;
	right: 30px;
	padding: 10px;
	border-radius: 5px;
}

#info-btn {
	right: 100px;
}

.info {
	transform: scale(0);
	opacity: 0;
	z-index: 10;
	background: #ffffffda;
	position: absolute;
	padding: 10px;
	border-radius: 10px;
	color: #000;
	font-size: 0.8rem;
	right: 100px;
	top: 80px;
	transition: all 0.3s;
}

#info-btn.visible:hover ~ .info {
	opacity: 0.9;
	transform: scale(1);
}

#intro {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 10px;
	padding: 10px;
	padding-top: 75px;
	padding-bottom: 75px;
}

h1 {
	color: rgba(0, 255, 115, 0.747);
	font-weight: 600;
	text-align: center;
}

h3 {
	text-align: center;
	font-weight: 400;
}

h2 {
	font-weight: 600;
	color: #ffffff;
	text-align: center;
}

li {
	list-style: none;
}

button {
	cursor: pointer;
	transition: all 0.3s;
}
button:hover {
	opacity: 0.8;
}

button,
input {
	border: none;
	font-family: Poppins, Arial, Helvetica, sans-serif;
}

#options {
	display: flex;
	justify-content: center;
	align-items: stretch;
	gap: 20px;
	flex-wrap: wrap;

	& > div {
		flex: 1;
		height: 300px;
		min-width: 290px;
		background: none;
		border: 1px solid #ffffff2f;
		padding: 1rem;
		display: flex;
		flex-direction: column;
		gap: 10px;
		border-radius: 1rem;
		transition: 0.3s all;

		&:hover {
			box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.144);
		}

		h2 {
			font-size: 1.2rem;
			/* text-decoration: underline; */
		}

		ul {
			display: flex;
			flex-direction: column;
			gap: 5px;

			li {
				border-radius: 8px;
				padding: 5px 10px;
				background: #e9ff2128;
			}
		}

		button {
			width: 100%;
			padding: 10px;
			border-radius: 10px;
			background: rgba(0, 255, 115, 0.747);
			color: black;
			font-weight: 600;
			font-size: 1rem;
			margin-top: auto;
		}
	}
}

#canvas,
#intro,
#home-btn,
#info-btn {
	opacity: 0;
	pointer-events: none;
	transition: all 0.3s;
}

#intro {
	transform: translate(0, -120%);
}

#canvas {
	transform: translate(0, 120%);
	position: absolute;
	left: 0;
	z-index: 5;
	top: 0;
}

#home-btn,
#info-btn {
	transform: translate(0, -120%);
	z-index: 10;
	font-weight: bold;
}

#canvas.visible,
#home-btn.visible,
#info-btn.visible {
	pointer-events: all;
	transform: translate(0, 0);
}

#home-btn.visible,
#info-btn.visible {
	opacity: 0.75;
}

#canvas.visible {
	opacity: 100%;
}

#intro.visible {
	transform: translate(0, 0);
	opacity: 100%;
	pointer-events: all;
}

